--- a/templates/in.html
+++ b/templates/in.html
@@ -11,12 +11,12 @@
         font-size: large;
         font-weight: 900;
       }
-      body {
+      section {
         font-family: Arial, Helvetica, sans-serif;
         background-color: #f4f4f4;
         margin: auto;
         padding: 20px;
-        align-items: center;
+        align-items: justify;
         border-style: double;
         max-width: 30%;
         max-height: 30%;
@@ -27,6 +27,7 @@
       .container {
         margin-bottom: 15px;
         text-align: center;
+        justify-items: center;
         padding-left: 0;
       }
       .container label {
@@ -94,6 +95,7 @@
   <div>
     <header class="header">Cardiovascular Disease Predictor</header>
   </div>
+
   <body>
     <section>
       <div>
